# alchemux

./: .gitignore  EULA.md  LICENSE  LICENSE.MD  README.md  config.toml.example  env.example  prek.toml  pyproject.toml
.github/workflows/: ci.yml  prek.yml  release.yml
backend/: AGENTS.md  requirements.txt
backend/app/: __init__.py  entrypoint.py  main.py
backend/app/cli/: __init__.py  app.py  argv_normalize.py  batch_parsing.py  output.py  prompts.py  selectors.py  url_input.py
backend/app/cli/commands/: __init__.py  accept_eula.py  audio_format.py  batch.py  config.py  debug.py  distill.py  doctor.py  inspect.py  invoke.py  mux.py  plain.py  save_default.py  seal.py  setup.py  storage.py  update.py  verbose.py  video_format.py
backend/app/core/: config_manager.py  config_wizard.py  downloader.py  eula.py  logger.py  setup_wizard.py  toml_config.py  tracebacks.py
backend/app/services/: gcp_upload.py  s3_upload.py
backend/app/templates/: config.toml.example
backend/app/tests/: README.md  __init__.py  test_batch_command.py  test_batch_file_discovery.py  test_batch_parsing.py  test_batch_playlist_expansion.py  test_cli_argv_normalize.py  test_cli_clipboard_input.py  test_cli_config_smoke.py  test_cli_interactive_input.py  test_config_doctor_repair.py  test_config_manager.py  test_downloader_path_resolution.py  test_ephemeral_config.py  test_update_command.py  test_video_enabled_gating.py
backend/app/utils/: file_utils.py  metadata.py
backend/scripts/: build.py
docs/: commands.md  configs.md  contributors.md  install.md  known-issues.md  legend.md  release.md
scripts/: ci_build.py  ci_helpers.py
