# Alchemux — shared config for tooling (Ruff, etc.)
# Package build/metadata lives in backend or separate packaging config.

[project]
name = "alchemux"
version = "0.1.0"
description = "URL to MP3 converter (CLI)"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["backend"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# Default rule set; fast, autofixable. No type-check or heavy checks here.
exclude = [".venv", "venv", "__pycache__", "*.egg-info", "dist", "build"]
