# Alchemux — PyPI package (alchemux) + tooling (Ruff)

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemux"
version = "0.1.1-alpha"
description = "CLI wrapper for yt-dlp & FFmpeg with cloud upload optionality"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.1.0",
    "python-dotenv>=1.0.0",
    "mutagen>=1.47.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "pyperclip>=1.8.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < \"3.11\"",
    "tomli-w>=1.0.0",
    "tomlkit>=0.12.0",
    "google-cloud-storage>=2.10.0",
    "boto3>=1.28.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

[project.scripts]
alchemux = "app.entrypoint:main"
amx = "app.entrypoint:main"

[tool.setuptools.package-dir]
"" = "backend"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
app = ["templates/*"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["backend"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
exclude = [".venv", "venv", "__pycache__", "*.egg-info", "dist", "build"]
